force-app/main/default/objects/AnaliseParecer__c/AnaliseParecer__c.object-meta.xml
<CustomObject>
    <label>Análise do parecer</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Análise do parecer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análises do parecer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>