force-app/main/default/objects/AnaliseParecer__c/fields/Alcada__c.field-meta.xml
<CustomField>
    <fullName>Alcada__c</fullName>
    <label>Alçada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comitê</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Formalização</fullName>
            </value>
            <value>
                <fullName>Superintendência</fullName>
            </value>
            <value>
                <fullName>Diretora de Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>