force-app/main/default/objects/AnaliseParecer__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentário</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>