force-app/main/default/objects/AnaliseParecer__c/fields/ComposicaoComite__c.field-meta.xml
<CustomField>
    <fullName>ComposicaoComite__c</fullName>
    <label>Composição Comitê</label>
    <length>255</length>
    <type>Text</type>
</CustomField>