force-app/main/default/objects/AnaliseParecer__c/fields/DataAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataAnalise__c</fullName>
    <label>Data da análise</label>
    <type>DateTime</type>
</CustomField>