force-app/main/default/objects/AnaliseParecer__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>