force-app/main/default/objects/AnaliseParecer__c/fields/NomeDaConta__c.field-meta.xml
<CustomField>
    <fullName>NomeDaConta__c</fullName>
    <description>Busca na oportunidade pelo nome da conta</description>
    <formula>BLANKVALUE(Parecer__r.Oportunidade__r.Account.Name, Parecer__r.Oportunidade__r.Account.FirstName  + &apos; &apos; + Parecer__r.Oportunidade__r.Account.MiddleName + &apos; &apos; +
Parecer__r.Oportunidade__r.Account.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>