force-app/main/default/objects/AnaliseParecer__c/fields/Oberva_es_do_Cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Oberva_es_do_Cr_dito__c</fullName>
    <label>Obervações do Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>