force-app/main/default/objects/AnaliseParecer__c/fields/Parecer__c.field-meta.xml
<CustomField>
    <fullName>Parecer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parecer</label>
    <referenceTo>Parecer__c</referenceTo>
    <relationshipLabel>Análises do parecer</relationshipLabel>
    <relationshipName>AnalisesParecer</relationshipName>
    <type>Lookup</type>
</CustomField>