force-app/main/default/objects/AnaliseParecer__c/fields/Prazo_Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Aprovado__c</fullName>
    <label>Prazo Aprovado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>