force-app/main/default/objects/AnaliseParecer__c/fields/ProprietarioDaOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ProprietarioDaOportunidade__c</fullName>
    <description>Busca pelo nome do responsavel da oportunidade</description>
    <formula>Parecer__r.Oportunidade__r.Owner.FirstName +  &apos; &apos;  +    Parecer__r.Oportunidade__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário da oportunidade</label>
    <type>Text</type>
</CustomField>