force-app/main/default/objects/AnaliseParecer__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <label>Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>