force-app/main/default/objects/AnaliseParecer__c/fields/StatusAnalise__c.field-meta.xml
<CustomField>
    <fullName>StatusAnalise__c</fullName>
    <label>Status da análise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Aprovado com ressalva</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Escalonar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>