force-app/main/default/objects/AnaliseParecer__c/fields/Taxa_Aprovada__c.field-meta.xml
<CustomField>
    <fullName>Taxa_Aprovada__c</fullName>
    <label>Taxa Aprovada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>