force-app/main/default/objects/AnaliseParecer__c/recordTypes/AnaliseParecerComplianceCredito.recordType-meta.xml
<RecordType>
    <fullName>AnaliseParecerComplianceCredito</fullName>
    <active>true</active>
    <description>Análise dos pareceres de Securitizadora destinados ao Compliance e Credito.</description>
    <label>Análise Parecer - Compliance e Credito</label>
</RecordType>