force-app/main/default/objects/AnaliseParecer__c/recordTypes/AnaliseParecerInvestimentos.recordType-meta.xml
<RecordType>
    <fullName>AnaliseParecerInvestimentos</fullName>
    <active>true</active>
    <description>Análises destinadas as oportunidades de investimentos</description>
    <label>Análise Parecer Investimentos</label>
</RecordType>