force-app/main/default/objects/AnaliseParecer__c/recordTypes/AnaliseParecerSecuritizadora.recordType-meta.xml
<RecordType>
    <fullName>AnaliseParecerSecuritizadora</fullName>
    <active>true</active>
    <description>Análises destinadas ao comitê comercial da Securitizadora</description>
    <label>Analise Parecer - Securitizadora</label>
</RecordType>