force-app/main/default/objects/AnaliseParecer__c/listViews/Comite_AnaliseParecer1.listView-meta.xml
<ListView>
    <fullName>Comite_AnaliseParecer1</fullName>
    <columns>NAME</columns>
    <columns>Parecer__c</columns>
    <columns>ComposicaoComite__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DataAnalise__c</columns>
    <columns>Escalonado__c</columns>
    <columns>StatusAnalise__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Queue</filterScope>
    <label>Comitê - Todos</label>
    <queue>Comite</queue>
    <sharedTo>
        <roleAndSubordinates>GG_RI</roleAndSubordinates>
        <roleAndSubordinates>GerenteGeralSecuritizadora</roleAndSubordinates>
    </sharedTo>
</ListView>