force-app/main/default/objects/AnaliseParecer__c/listViews/Comite_AnaliseParecer2.listView-meta.xml
<ListView>
    <fullName>Comite_AnaliseParecer2</fullName>
    <filterScope>Queue</filterScope>
    <label>Comitê</label>
    <queue>Comite</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>