force-app/main/default/objects/AnaliseParecer__c/listViews/ComiteEmAberto.listView-meta.xml
<ListView>
    <fullName>ComiteEmAberto</fullName>
    <columns>Parecer__c</columns>
    <columns>NAME</columns>
    <columns>Alcada__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Escalonado__c</columns>
    <columns>Etapa__c</columns>
    <columns>StatusAnalise__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alcada__c</field>
        <operation>equals</operation>
        <value>Comitê</value>
    </filters>
    <filters>
        <field>StatusAnalise__c</field>
        <operation>equals</operation>
        <value>Aberto,Em análise</value>
    </filters>
    <label>Comitê - Em aberto</label>
    <sharedTo>
        <roleAndSubordinates>ExecutivoOpEstruturadas</roleAndSubordinates>
    </sharedTo>
</ListView>