force-app/main/default/objects/AnaliseParecer__c/listViews/Compliance_AnaliseParecer.listView-meta.xml
<ListView>
    <fullName>Compliance_AnaliseParecer</fullName>
    <columns>NAME</columns>
    <columns>Parecer__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DataAnalise__c</columns>
    <columns>Escalonado__c</columns>
    <columns>Responsavel__c</columns>
    <columns>StatusAnalise__c</columns>
    <filterScope>Queue</filterScope>
    <label>Compliance - Todos</label>
    <queue>Compliance</queue>
    <sharedTo>
        <group>Compliance</group>
        <roleAndSubordinates>GerenteGeralSecuritizadora</roleAndSubordinates>
    </sharedTo>
</ListView>