force-app/main/default/objects/AnaliseParecer__c/listViews/ComplianceEmAberto.listView-meta.xml
<ListView>
    <fullName>ComplianceEmAberto</fullName>
    <columns>Parecer__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comentario__c</columns>
    <columns>Alcada__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>StatusAnalise__c</field>
        <operation>notEqual</operation>
        <value>Aprovado,Aprovado com ressalva,Reprovado,Escalonar</value>
    </filters>
    <label>Compliance - Em aberto</label>
    <queue>Compliance</queue>
    <sharedTo>
        <group>Compliance</group>
    </sharedTo>
</ListView>