force-app/main/default/objects/AnaliseParecer__c/listViews/Cr_dito_Visualiza_o.listView-meta.xml
<ListView>
    <fullName>Cr_dito_Visualiza_o</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>StatusAnalise__c</columns>
    <columns>Escalonado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Comentario__c</columns>
    <filterScope>Mine</filterScope>
    <label>Crédito Visualização</label>
</ListView>