force-app/main/default/objects/AnaliseParecer__c/listViews/CreditoEmAberto.listView-meta.xml
<ListView>
    <fullName>CreditoEmAberto</fullName>
    <columns>NAME</columns>
    <columns>Parecer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusAnalise__c</columns>
    <columns>Comentario__c</columns>
    <columns>Responsavel__c</columns>
    <columns>NomeDaConta__c</columns>
    <columns>ProprietarioDaOportunidade__c</columns>
    <columns>Escalonado__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>StatusAnalise__c</field>
        <operation>equals</operation>
        <value>Aberto,Em análise</value>
    </filters>
    <label>Crédito - Em aberto</label>
    <queue>Credito</queue>
    <sharedTo>
        <group>Credito</group>
    </sharedTo>
</ListView>