force-app/main/default/objects/AnaliseParecer__c/listViews/Formalizacao_AnaliseParecer.listView-meta.xml
<ListView>
    <fullName>Formalizacao_AnaliseParecer</fullName>
    <columns>NAME</columns>
    <columns>Parecer__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DataAnalise__c</columns>
    <columns>Escalonado__c</columns>
    <columns>Responsavel__c</columns>
    <columns>StatusAnalise__c</columns>
    <filterScope>Queue</filterScope>
    <label>Formalização - Todos</label>
    <queue>Formalizacao</queue>
    <sharedTo>
        <group>Formalizacao</group>
        <roleAndSubordinates>GerenteGeralCaptacaoInvestimentos</roleAndSubordinates>
    </sharedTo>
</ListView>