force-app/main/default/objects/AnaliseParecer__c/listViews/Formalizacao_AnaliseParecer2.listView-meta.xml
<ListView>
    <fullName>Formalizacao_AnaliseParecer2</fullName>
    <filterScope>Queue</filterScope>
    <label>Formalização</label>
    <queue>Formalizacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>