force-app/main/default/objects/AnaliseParecer__c/listViews/FormalizacaoEmAberto.listView-meta.xml
<ListView>
    <fullName>FormalizacaoEmAberto</fullName>
    <columns>NAME</columns>
    <columns>Parecer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusAnalise__c</columns>
    <columns>Comentario__c</columns>
    <columns>Responsavel__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>StatusAnalise__c</field>
        <operation>equals</operation>
        <value>Aberto,Em análise</value>
    </filters>
    <label>Formalização - Em aberto</label>
    <queue>Formalizacao</queue>
    <sharedTo>
        <group>Formalizacao</group>
    </sharedTo>
</ListView>